# the-Spy-Cat-Agency

./: .env.example  .gitignore  Dockerfile  README.md  The Spy Cat Agency.postman_collection.json  docker-compose.yml  entrypoint.py  pyproject.toml
agency/: admin.py  models.py  serializers.py  urls.py  views.py
core/: settings.py  urls.py
