[project]
name = "the-spy-cat-agency"
version = "0.1.0"
description = ""
authors = [
    {name = "AlfurIvan",email = "vani4zhary@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.4,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false